# Little-Tree-Wallpaper

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: report.md
src/: main.py
src/ltwpAPI/: __init__.py  config.py  image.py  theme.py  wallpaper.py
xswpAPI/: __init__.py  config.py  theme.py  wallpaper.py
