[project]
name = "Little-Tree-Wallpaper"
version = "6.0.0"
description = """
Little Tree Wallpaper is a simple Python-based wallpaper software.
小树壁纸是一款简单的基于Python的壁纸软件。
"""
readme = "README.md"
license = {text = "AGPL-3.0-only"}
authors = [
    {name = "shu-shu-1", email = "zs3458222@outlook.com"},
    {name = "wsrscx", email = "3599637346@qq.com"}
]
requires-python = ">=3.12"
keywords = ["wallpaper", "desktop", "python", "tkinter", "maliang"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "colorama>=0.4.6",
    "maliang[opt]>=3.0.4",
    "plyer>=2.1.0",
    "pycurl>=7.45.6",
    "pyperclip>=1.9.0",
    "pystray>=0.19.5",
    "requests>=2.24.0",
    "tomlkit>=0.13.2",
    "pywin32>=310; platform_system == 'Windows'",
    "python-magic>=0.4.27; platform_system != 'Windows'",
    "python-magic-bin>=0.4.14; platform_system == 'Windows'",
    "filetype>=1.2.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/shu-shu-1/Little-Tree-Wallpaper"
Documentation = "https://github.com/shu-shu-1/Little-Tree-Wallpaper#readme"
Issues = "https://github.com/shu-shu-1/Little-Tree-Wallpaper/issues"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"


[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.uv.workspace]
members = ["Little-Tree-Wallpaper"]

[tool.uv.sources]
pywin32 = {index = "tsinghua",marker = "platform_system == 'Windows'" }
python-magic-bin = {index = "tsinghua",marker = "platform_system == 'Windows'" }
python-magic = {index = "tsinghua",marker = "platform_system != 'Windows'" }

[dependency-groups]
dev = [
    "nuitka>=2.7",
]
